--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,8 +290,7 @@ workflows:
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [main]
-      #        only: [test-feature-branch]
+              only: [test-feature-branch]
       #- configure-infrastructure:
       #    requires: [deploy-infrastructure]
       #- run-migrations:
