--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,7 +290,7 @@ workflows:
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-                only: [main]
+                only: [master]
       #        only: [test-feature-branch]
       #- configure-infrastructure:
       #    requires: [deploy-infrastructure]
