--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,8 +112,8 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
-               --stack-name "backend${CIRCLE_WORKFLOW_ID:0:5}" \
-               --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:5}
+              --stack-name "backend" \
+              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:5}
       #        exit 1
       #- run:
       #    name: Ensure front-end infrastructure exist
