--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-#       # Here's where you will add some code to rollback on failure      
+      # Here's where you will add some code to rollback on failure      
       # - destroy_environment
   configure-infrastructure:
     docker:
@@ -351,11 +351,11 @@ workflows:
       #    requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
-      #- deploy-infrastructure:
+      - deploy-infrastructure:
       #   requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #    filters:
-      #      branches: 
-      #        only: [master]
+          filters:
+            branches: 
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       #- run-migrations:
