--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -354,9 +354,9 @@ workflows:
       #     filters:
       #       branches: 
       #         only: [master]
-      - configure-infrastructure
+      # - configure-infrastructure
       #     requires: [deploy-infrastructure]
-      # - run-migrations
+      - run-migrations
       #     requires: [configure-infrastructure]
       #- deploy-frontend:
       #    requires: [run-migrations]
