--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -216,10 +216,10 @@ jobs:
           command: |
             export TYPEORM_HOST=$(aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             cd backend
-            npm cache clean --force
+            npm cache clean
             npm install
             npm run premigrations
-            npm run migrations
+            # npm run migrations
             
 
       # - run:
