--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -11,7 +11,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: !Sub UdaPeople-${ID}
-      GroupDescription: Allow port 22 and port 3030 and 5432.
+      GroupDescription: Allow port 22 and port 3030.
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 22
@@ -22,8 +22,8 @@ Resources:
           ToPort: 3030
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
-          FromPort: 5432
-          ToPort: 5432
+          FromPort: 5532
+          ToPort: 5532
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 9100
