--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,7 +195,7 @@ jobs:
       #     command: |
       #       apk add ansible gzip openssh-client
       - attach_workspace:
-          at: ~/
+          at: ~/ 
       - run:
           name: Configure server
           command: |
@@ -350,11 +350,11 @@ workflows:
       #    requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
-      # - deploy-infrastructure:
-      #   # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters: 
-      #       branches: 
-      #         only: [master]   
+      - deploy-infrastructure:
+        # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters: 
+            branches: 
+              only: [master]   
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       # - run-migrations:
