--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -26,6 +26,10 @@ Resources:
           ToPort: 5532
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
+          FromPort: 5432
+          ToPort: 5432
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
           FromPort: 9100
           ToPort: 9100
           CidrIp: 0.0.0.0/0
@@ -35,8 +39,7 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udacity # If you use another key pair name, you should change this value to match.
-      # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
+      KeyName: udacity
       # Ubuntu 18 or higher works fine
       ImageId: ami-068663a3c619dd892 
       Tags:
