--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,23 +155,23 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip
-      - run:
-          name: Ensure back-end infrastructure exists
-          command: |
-            aws cloudformation deploy \
-              --template-file .circleci/files/backend.yml \
-              --tags project=udapeople \
-              --stack-name "backend" \
-              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:5}
+      # - run:
+      #     name: Ensure back-end infrastructure exists
+      #     command: |
+      #       aws cloudformation deploy \
+      #         --template-file .circleci/files/backend.yml \
+      #         --tags project=udapeople \
+      #         --stack-name "backend" \
+      #         --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:5}
 
-      #- run:
-      #    name: Ensure front-end infrastructure exist
-      #    command: |
-      #      aws cloudformation deploy \
-      #        --template-file .circleci/files/frontend.yml \
-      #        --tags project=udapeople \
-      #        --stack-name "frontend-${CIRCLE_WORKFLOW_ID:0:5}" \
-      #        --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:5}"
+      - run:
+         name: Ensure front-end infrastructure exist
+         command: |
+           aws cloudformation deploy \
+             --template-file .circleci/files/frontend.yml \
+             --tags project=udapeople \
+             --stack-name "frontend-${CIRCLE_WORKFLOW_ID:0:5}" \
+             --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:5}"
       - run:
           name: Add back-end ip to ansible inventory
           command: |
@@ -203,7 +203,7 @@ jobs:
             aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text >> inventory.txt
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml 
-      # Here's where you will add some code to rollback on failure      
+           
 
   run-migrations:
     docker: 
@@ -219,14 +219,7 @@ jobs:
             npm install
             npm run premigrations
             npm run migrations
-            
-
-      # - run:
-      #     name: Send migration results to memstash
-      #     command: |
-      #       # Your code here
-      #       exit 1
-      # Here's where you will add some code to rollback on failure      
+              
 
   deploy-frontend:
     docker:
@@ -236,6 +229,7 @@ jobs:
       - run:
           name: Deploy Frontend
           command: |
+            #Get backend url:
             export BACKEND_PUBLIC_IP=$(aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
              echo "API_URL=http://$BACKEND_PUBLIC_IP:3030" 
             # Build the frontend
@@ -246,7 +240,7 @@ jobs:
             # aws s3 sync dist s3://udapeople-project
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:5} --recursive
 
-#       # Here's where you will add some code to rollback on failure      
+          
                     
   deploy-backend:
     docker:
@@ -269,7 +263,7 @@ jobs:
             ls ../.circleci/ansible/roles/deploy/
             cd ../.circleci/ansible
             ansible-playbook -i inventory.txt deploy-backend.yml
-      # Here's where you will add some code to rollback on failure  
+        
 
   smoke-test:
     docker:
@@ -350,18 +344,19 @@ workflows:
       #    requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
-      # - deploy-infrastructure:
-      #   # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters: 
-      #       branches: 
-      #         only: [master]   
+      - deploy-infrastructure:
+        # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters: 
+            branches: 
+              only: [master]   
       # - configure-infrastructure: 
       #     requires: [deploy-infrastructure]
       # - run-migrations  
           # requires: [configure-infrastructure]
-      #- deploy-frontend:
-      #    requires: [run-migrations]
-      - deploy-backend
+      - deploy-frontend:
+         requires: [deploy-infrastructure]
+        #  requires: [run-migrations]
+      # - deploy-backend
       #    requires: [run-migrations]
       #- smoke-test:
       #    requires: [deploy-backend, deploy-frontend]
