--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,7 +350,7 @@ workflows:
               only: [master]   
       - configure-infrastructure: 
           requires: [deploy-infrastructure]
-      - run-migrationsL:  
+      - run-migrations:  
           requires: [configure-infrastructure]
       - deploy-frontend:
          requires: [run-migrations]
