--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,9 @@ commands:
           name: Destroy environment
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name backend-${CIRCLE_WORKFLOW_ID:0:5}
+            aws cloudformation delete-stack --stack-name backendStack
             aws s3 rm s3://udapeople-<<parameters.Workflow_ID>> --recursive
-            aws cloudformation delete-stack --stack-name frontend-<< parameters.Workflow_ID >>
+            aws cloudformation delete-stack --stack-name frontendStack
   notify_on_failure:
       steps:
         - slack/notify:
@@ -284,7 +284,7 @@ jobs:
               echo "Rolling Back"
               exit 1
             fi
-      - notify_on_failure
+      # - notify_on_failure
       - destroy_environment
 
   cloudfront-update: 
