--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -337,7 +337,7 @@ workflows:
       #- build-backend
       #- test-frontend:
       #    requires: [build-frontend]
-      #- test-backend:
+      - test-backend
       #    requires: [build-backend]
       #- scan-backend:
       #    requires: [build-backend]
@@ -356,7 +356,7 @@ workflows:
       #    requires: [run-migrations]
       # - deploy-backend:
       #    requires: [run-migrations]
-      - smoke-test
+      # - smoke-test
       #    requires: [deploy-backend, deploy-frontend]
       #- cloudfront-update:
       #    requires: [smoke-test]
