--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,9 @@ commands:
           when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name backendStack
-            aws s3 rm s3://udapeople-<<parameters.Workflow_ID>> --recursive
             aws cloudformation delete-stack --stack-name frontendStack
+            aws s3 rm s3://udapeople-<<parameters.Workflow_ID>> --recursive
+            
   notify_on_failure:
       steps:
         - slack/notify:
@@ -337,7 +338,7 @@ workflows:
       #- build-backend
       #- test-frontend:
       #    requires: [build-frontend]
-      - test-backend
+      #- test-backend:
       #    requires: [build-backend]
       #- scan-backend:
       #    requires: [build-backend]
@@ -356,7 +357,7 @@ workflows:
       #    requires: [run-migrations]
       # - deploy-backend:
       #    requires: [run-migrations]
-      # - smoke-test
+      - smoke-test
       #    requires: [deploy-backend, deploy-frontend]
       #- cloudfront-update:
       #    requires: [smoke-test]
