--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ commands:
           command: |
             aws cloudformation delete-stack --stack-name backendStack
             aws cloudformation delete-stack --stack-name frontendStack
-            aws s3 rm s3://udapeople-<<CIRCLE_WORKFLOW_ID:0:5>> --recursive
+            aws s3 rm s3://udapeople-5ef1b --recursive
             
   notify_on_failure:
       steps:
