--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,8 +275,8 @@ jobs:
           command: |
             export BACKEND_PUBLIC_IP=$(aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             
-            # URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
-            URL="http://g00gle.com"
+            URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
+            # URL="http://g00gle.com"
             if curl -s --head ${URL}
             then
               echo "It worked!"
@@ -287,6 +287,7 @@ jobs:
             fi
       # - notify_on_failure
       - destroy_environment
+      # - revert-migrations 
 
   cloudfront-update: 
     docker:
@@ -334,8 +335,8 @@ jobs:
 workflows:
   default:
     jobs:
-      #- build-frontend
-      #- build-backend
+      # - build-frontend
+      # - build-backend
       #- test-frontend:
       #    requires: [build-frontend]
       #- test-backend:
@@ -344,21 +345,21 @@ workflows:
       #    requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
-      # - deploy-infrastructure:
-      #   # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters: 
-      #       branches: 
-      #         only: [master]   
-      # - configure-infrastructure: 
-      #     requires: [deploy-infrastructure]
-      # - run-migrations:  
-      #     requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #    requires: [run-migrations]
-      # - deploy-backend:
-      #    requires: [run-migrations]
-      - smoke-test
-      #    requires: [deploy-backend, deploy-frontend]
+      - deploy-infrastructure:
+        # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters: 
+            branches: 
+              only: [master]   
+      - configure-infrastructure: 
+          requires: [deploy-infrastructure]
+      - run-migrations:  
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+         requires: [run-migrations]
+      - deploy-backend:
+         requires: [run-migrations]
+      - smoke-test:
+         requires: [deploy-backend, deploy-frontend]
       #- cloudfront-update:
       #    requires: [smoke-test]
       #- cleanup:
