--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,10 +85,10 @@ jobs:
           name: Back-end build
           command: |
             cd backend
-            npm install
+            npm iinstall
             npm run build
       - save_cache:
-          paths: [backend/node_modulees]
+          paths: [backend/node_modules]
           key: backend-build
 
   test-frontend:
