--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -336,7 +336,7 @@ workflows:
   default:
     jobs:
       # - build-frontend
-      - build-backend
+      # - build-backend
       # - test-frontend:
       #    requires: [build-frontend]
       # - test-backend:
@@ -360,7 +360,7 @@ workflows:
       #    requires: [run-migrations]
       # - smoke-test:
       #    requires: [deploy-backend, deploy-frontend]
-      #- cloudfront-update:
-      #    requires: [smoke-test]
-      #- cleanup:
-      #    requires: [cloudfront-update]
+      - cloudfront-update:
+         requires: [smoke-test]
+      - cleanup:
+         requires: [cloudfront-update]
