--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,8 +85,8 @@ jobs:
           name: Back-end build
           command: |
             cd backend
-            npm install
-            # npm run build
+            # npm install
+            npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
