--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ jobs:
             npm run build
 
       # - notify_on_failure  
-      - notify_on_success
+      # - notify_on_success
 
       - save_cache:
           paths: [backend/node_modules]
@@ -281,7 +281,7 @@ jobs:
             export BACKEND_PUBLIC_IP=$(aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             
             # URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
-            URL="http://google.com"
+            URL="http://g00gle.com"
             if curl -s --head ${URL}
             then
               echo "It worked!"
@@ -290,7 +290,7 @@ jobs:
               echo "Rolling Back"
               exit 1
             fi
-      - notify_on_success
+      - notify_on_failure
       # - destroy_environment
       # - revert-migrations 
 
