--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -291,7 +291,7 @@ jobs:
               exit 1
             fi
       - notify_on_failure
-      # - destroy_environment
+      - destroy_environment
       # - revert-migrations 
 
   cloudfront-update: 
