--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -332,8 +332,8 @@ jobs:
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "frontend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "backendStack"
+              aws cloudformation delete-stack --stack-name "frontendStack"
             fi 
             
 
@@ -357,7 +357,7 @@ workflows:
       #         only: [master]   
       # - configure-infrastructure: 
       #     requires: [deploy-infrastructure]
-      - run-migrations
+      - run-migrations 
           # requires: [configure-infrastructure]
       # - deploy-frontend:
       #    requires: [run-migrations]
