--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,8 +276,8 @@ jobs:
           command: |
             export BACKEND_PUBLIC_IP=$(aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             
-            URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
-            # URL="http://g00gle.com"
+            # URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
+            URL="http://g00gle.com"
             if curl -s --head ${URL}
             then
               echo "It worked!"
@@ -286,9 +286,9 @@ jobs:
               echo "Rolling Back"
               exit 1
             fi
-      # - notify_on_failure
-      - notify_on_success
-      # - destroy_environment
+      - notify_on_failure
+      # - notify_on_success
+      - destroy_environment
       # - revert-migrations 
 
   cloudfront-update: 
