--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -328,9 +328,9 @@ jobs:
             echo Old Workflow ID: $OldWorkflowID 
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
-              aws s3 rm "s3://udapeople-3eab0" --recursive
-              aws cloudformation delete-stack --stack-name "backendStack"
-              aws cloudformation delete-stack --stack-name "frontendStack"
+              aws s3 rm s3://udapeople-3eab0 --recursive
+              aws cloudformation delete-stack --stack-name backendStack
+              aws cloudformation delete-stack --stack-name frontendStack
             fi 
             
 
